--- a/public/css/mediaqueries.css
+++ b/public/css/mediaqueries.css
@@ -229,9 +229,15 @@
 @media screen and (device-aspect-ratio: 40 / 71) {
   /* Styles */ }
 /* All Politicians Layout */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 769px) {
   #politicians_container .politician {
-    width: 33%; } }
+    width: 33%; }
+
+  .slidermenu {
+    display: none; }
+
+  .menu {
+    display: block; } }
 @media screen and (min-width: 1250px) {
   #politicians_container .politician {
     width: 24.5%; } }
