--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4585,7 +4585,7 @@ body {
   width: 100%;
   position: absolute;
   top: 0;
-  padding-top: 200px; }
+  padding-top: 120px; }
 
 /* General classes */
 .clear {
@@ -4615,7 +4615,8 @@ strong {
 h1 {
   width: 100%;
   text-align: center;
-  font-weight: 100; }
+  font-weight: 100;
+  margin: 0; }
 
 h2 {
   font-family: 'Helvetica Neue', sans-serif;
@@ -4641,7 +4642,7 @@ h3 {
   letter-spacing: 2px;
   color: #5c5c5c;
   text-align: right;
-  padding-right: 20px; }
+  padding-right: 0; }
 
 /* Left vertical menu */
 .menu {
@@ -4729,9 +4730,36 @@ h3 {
   width: 100%;
   border-left: 130px solid transparent; }
 
-h2.sub-heading {
+.sub-heading {
   margin-left: 8%;
   letter-spacing: 2px; }
+
+.house-sub-heading {
+  text-align: center;
+  letter-spacing: 2px;
+  color: #5c5c5c;
+  font-family: 'Helvetica Neue', sans-serif;
+  font-weight: 200;
+  font-size: 2em;
+  font-weight: 200; }
+
+.notice {
+  width: 33%;
+  max-width: 450px;
+  background-color: #e6e6e6;
+  border: 3px solid #5c5c5c;
+  font-family: 'Helvetica', sans-serif;
+  font-weight: 200;
+  color: #5c5c5c;
+  font-size: 1em;
+  margin: 20px auto 20px auto;
+  padding: 20px; }
+  .notice i {
+    font-size: 2em;
+    color: #b2b2b2; }
+
+.house-results {
+  margin-bottom: 100px; }
 
 .constituency-form {
   position: relative; }
@@ -5015,6 +5043,10 @@ form.selection-form {
       border-top-color: #965251; }
   #politicians_container img.politician_img {
     height: 140px;
+    width: auto;
+    margin: 10px; }
+  #politicians_container img.senate_map {
+    height: auto;
     width: auto;
     margin: 10px; }
 
