--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -57,7 +57,7 @@ body {
    width: 100%;
    position: absolute;
    top: 0;
-   padding-top: 200px;
+   padding-top: 120px;
 }
 
 
@@ -105,8 +105,8 @@ strong {
 h1 {
   width: 100%;
   text-align: center;
-  // font-family: 'Lato', sans-serif;
   font-weight: 100;
+  margin: 0;
 }
 
 h2 {
@@ -137,7 +137,7 @@ h3 {
   letter-spacing: 2px;
   color: $dark_text;
   text-align: right;
-  padding-right: 20px;
+  padding-right: 0;
 }
 
 
@@ -251,9 +251,39 @@ h3 {
 
 }
 
-h2.sub-heading {
+.sub-heading {
   margin-left: 8%;
   letter-spacing: 2px;
+}
+
+.house-sub-heading {
+   text-align: center;
+   letter-spacing: 2px;
+   color: $dark_text;
+   @include HelveticaNeue;
+   font-size: 2em;
+   font-weight: 200;
+}
+
+.notice {
+   width: 33%;
+   max-width: 450px;
+   background-color: lighten(#ccc, 10%);
+   border: 3px solid $dark_text;
+   font-family: 'Helvetica', sans-serif;
+   font-weight: 200;
+   color: $dark_text;
+   font-size: 1em;
+   margin: 20px auto 20px auto;
+   padding: 20px;
+   i {
+      font-size: 2em;
+      color: #b2b2b2;
+   }
+}
+
+.house-results {
+   margin-bottom: 100px;
 }
 
 .constituency-form {
@@ -360,7 +390,6 @@ h2.sub-heading {
    color: $white;
    font-size: 1.5em;
    line-height: 1.5em;
-   // background-color: $medium;
    padding: 5px 5px 5px 10px;
    height: 46px;
    margin: 0;
@@ -373,7 +402,6 @@ h2.sub-heading {
 .pol_info2 {
    @include HelveticaNeue;
    letter-spacing: 2px;
-   // background-color: #193441;
    color: $light;
    font-size: 1.1em;
    line-height: 1.1em;
@@ -579,6 +607,11 @@ form.selection-form {
    }
    img.politician_img {
       height: 140px;
+      width: auto;
+      margin: 10px;
+   }
+   img.senate_map {
+      height: auto;
       width: auto;
       margin: 10px;
    }
