--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4586,11 +4586,8 @@ th {
   .menu-button-left {
     left: 20px; }
 
-  .menu-button-pushed {
-    left: 140px; }
-
   .slidermenu,
-  #menu-button {
+  .page-body {
     -webkit-transition: all 0.2s linear !important;
     -moz-transition: all 0.2s linear !important;
     -ms-transition: all 0.2s linear !important;
@@ -4841,8 +4838,9 @@ h3 {
 
 /* Header */
 .header {
-  position: relative;
+  position: absolute;
   top: 0;
+  right: 20px;
   z-index: 0; }
 
 .heading {
@@ -4851,7 +4849,8 @@ h3 {
   letter-spacing: 2px;
   color: #5c5c5c;
   text-align: right;
-  padding-right: 0; }
+  padding-right: 0;
+  font-size: 6em; }
 
 /* Select My MP Page */
 .contents {
@@ -5213,3 +5212,88 @@ form.selection-form {
     padding: 5px 15px;
     border: 0;
     color: #f2f2eb; }
+
+@media all and (max-width: 1024px) {
+  .heading {
+    font-size: 4.85em; } }
+@media all and (max-width: 768px) {
+  .page-body {
+    overflow-x: hidden;
+    position: relative; }
+
+  .page-body-left {
+    left: 0px; }
+
+  .page-body-pushed {
+    left: 120px; }
+
+  .heading {
+    font-size: 4em; }
+
+  .container {
+    width: 100%;
+    height: 100%;
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent; }
+
+  .contents {
+    left: 0;
+    border: 0; }
+
+  .politician {
+    max-width: 220px;
+    width: 30%; } }
+@media all and (max-width: 640px) {
+  .page-body {
+    overflow-x: hidden;
+    position: relative; }
+
+  .page-body-left {
+    left: 0px; }
+
+  .page-body-pushed {
+    left: 120px; }
+
+  .container {
+    width: 100%;
+    height: 100%;
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent; }
+
+  .contents {
+    left: 0;
+    border: 0; }
+
+  .heading {
+    font-size: 3.5em; }
+
+  .politician {
+    max-width: 220px;
+    width: 30%; } }
+@media all and (max-width: 480px) {
+  .page-body {
+    overflow-x: hidden;
+    position: relative; }
+
+  .page-body-left {
+    left: 0px; }
+
+  .page-body-pushed {
+    left: 120px; }
+
+  .container {
+    width: 100%;
+    height: 100%;
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent; }
+
+  .contents {
+    left: 0;
+    border: 0; }
+
+  .heading {
+    font-size: 3em; }
+
+  .politician {
+    width: 80%;
+    max-width: 400px; } }
