--- a/public/scss/menu_mediaqueries.scss
+++ b/public/scss/menu_mediaqueries.scss
@@ -36,12 +36,8 @@ $dark_text: #5c5c5c;
       left: 20px;
    }
 
-   .menu-button-pushed {
-      left: 140px;
-   }
-
    .slidermenu,
-   #menu-button {
+   .page-body {
       -webkit-transition: all 0.2s linear !important;
       -moz-transition: all 0.2s linear !important;
       -ms-transition: all 0.2s linear !important;
