--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -122,8 +122,9 @@ h3 {
 /* Header */
 
 .header {
-   position: relative;
+   position: absolute;
    top: 0;
+   right: 20px;
    z-index: 0;
 }
 
@@ -134,6 +135,7 @@ h3 {
   color: $dark_text;
   text-align: right;
   padding-right: 0;
+  font-size: 6em;
 }
 
 /* Select My MP Page */
@@ -546,5 +548,122 @@ form.selection-form {
       padding: 5px 15px;
       border: 0;
       color: $white;
+   }
+}
+
+
+@media all and (max-width: 1024px) {
+   .heading {
+      font-size: 4.85em;
+   }
+}
+
+@media all and (max-width: 768px) {
+   .page-body {
+      overflow-x: hidden;
+	     position: relative;
+   }
+
+   .page-body-left {
+      left: 0px;
+   }
+
+   .page-body-pushed {
+      left: 120px;
+   }
+
+   .heading {
+      font-size: 4em;
+   }
+   .container {
+      width: 100%;
+      height: 100%;
+      border-right: 10px solid transparent;
+      border-left: 10px solid transparent;
+   }
+   .contents {
+      left: 0;
+      border: 0;
+   }
+   .politician {
+      max-width: 220px;
+      width: 30%;
+   }
+}
+
+
+@media all and (max-width: 640px) {
+   .page-body {
+      overflow-x: hidden;
+        position: relative;
+   }
+
+   .page-body-left {
+      left: 0px;
+   }
+
+   .page-body-pushed {
+      left: 120px;
+   }
+
+
+
+
+
+   .container {
+      width: 100%;
+      height: 100%;
+      border-right: 10px solid transparent;
+      border-left: 10px solid transparent;
+   }
+
+   .contents {
+      left: 0;
+      border: 0;
+   }
+
+   .heading {
+      font-size: 3.5em;
+   }
+
+   .politician {
+      max-width: 220px;
+      width: 30%;
+   }
+}
+
+@media all and (max-width: 480px) {
+   .page-body {
+      overflow-x: hidden;
+       position: relative;
+   }
+
+   .page-body-left {
+      left: 0px;
+   }
+
+   .page-body-pushed {
+      left: 120px;
+   }
+
+   .container {
+      width: 100%;
+      height: 100%;
+      border-right: 10px solid transparent;
+      border-left: 10px solid transparent;
+   }
+
+   .contents {
+      left: 0;
+      border: 0;
+   }
+
+   .heading {
+      font-size: 3em;
+   }
+
+   .politician {
+      width: 80%;
+      max-width: 400px;
    }
 }
