--- a/public/scss/frontpage_styles.scss
+++ b/public/scss/frontpage_styles.scss
@@ -241,7 +241,8 @@ footer {
 @media all and (max-width: 320px) {
    .heading {
       position: absolute;
-      top: 20px;
+      top: 0;
+      font-size: 2.2em;
    }
 }
 
