--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -12,9 +12,9 @@
 }
 
 @mixin Submit {
-   width: 150px;
+   width: 120px;
    height: 30px;
-   background-color: $orange;
+   background-color: $dark_text;
    border: 0;
    color: $white;
    font-size: 1em;
@@ -49,14 +49,14 @@ body {
 .container {
    width: 100%;
    height: 100%;
-   border-right: 130px solid transparent;
-   border-left: 130px solid transparent;
 }
 
 .content {
    height: 100%;
    width: 100%;
+   max-width: calc(100% - 120px);
    position: absolute;
+   left: 120px;
    top: 0;
    padding-top: 120px;
 }
@@ -100,6 +100,25 @@ strong {
   color: #3b5998;
 }
 
+.box {
+   width: 33%;
+   min-width: 450px;
+   max-width: 450px;
+   background-color: lighten(#ccc, 10%);
+   border: 3px solid $dark_text;
+   font-family: 'Helvetica', sans-serif;
+   font-weight: 200;
+   color: $dark_text;
+   font-size: 1em;
+   margin: 20px auto 20px auto;
+   padding: 20px;
+   i {
+      font-size: 2em;
+      color: #b2b2b2;
+   }
+}
+
+
 h1 {
   width: 100%;
   text-align: center;
@@ -142,10 +161,8 @@ h3 {
 
 .contents {
    position: relative;
-   left: -130px;
    z-index: 1;
    width: 100%;
-   border-left: 130px solid transparent;
 }
 
 .sub-heading {
@@ -160,23 +177,6 @@ h3 {
    @include HelveticaNeue;
    font-size: 2em;
    font-weight: 200;
-}
-
-.notice {
-   width: 33%;
-   max-width: 450px;
-   background-color: lighten(#ccc, 10%);
-   border: 3px solid $dark_text;
-   font-family: 'Helvetica', sans-serif;
-   font-weight: 200;
-   color: $dark_text;
-   font-size: 1em;
-   margin: 20px auto 20px auto;
-   padding: 20px;
-   i {
-      font-size: 2em;
-      color: #b2b2b2;
-   }
 }
 
 .house-results {
@@ -279,6 +279,10 @@ h3 {
    background-color: transparent;
 }
 
+.politician-info-container {
+   margin: 0 10px;
+}
+
 .pol_info1 {
    font-family: 'Helvetica Neue', sans-serif;
    letter-spacing: 2px;
@@ -298,7 +302,7 @@ h3 {
 .pol_info2 {
    @include HelveticaNeue;
    letter-spacing: 2px;
-   color: $light;
+   color: $white;
    font-size: 1.1em;
    line-height: 1.1em;
    padding: 5px 5px 5px 10px;
@@ -333,11 +337,12 @@ hr.med_grey {
 
 .contact_form {
    margin: 20px auto;
+   padding-bottom: 30px;
    width: 95%;
    label {
       @include Helvetica;
-      font-weight: bold;
-      font-size: 1.1em;
+      font-weight: 500;
+      font-size: 1em;
       color: $dark;
    }
    input[type=text],
@@ -391,8 +396,15 @@ hr.med_grey {
 
 /* All Politicians Pages */
 
+.dropdown-menu {
+   margin: 0 auto;
+   background-color: #ccc;
+   width: 50%;
+}
+
 form.selection-form {
    padding: 0 20px;
+   margin: 0;
    label {
       display: inline-block;
       @include Helvetica;
@@ -572,22 +584,86 @@ form.selection-form {
       left: 120px;
    }
 
+   /* View a Politician */
+
+   .small {
+      display: none;
+   }
+
+   .medium {
+      display: block;
+      img {
+         height: 160px;
+      }
+      .s-l-icons {
+         width: 100%;
+         height: 160px;
+         .section {
+            position: relative;
+            top: 43%;
+            width: 23.9%;
+            text-align: center;
+            display: inline-block;
+            i {
+               font-size: 2em;
+               color: #ccc;
+            }
+         }
+      }
+   }
+
+   .padding {
+      padding: 0 8px;
+   }
+
+   .large {
+      display: none;
+   }
+
+
    .heading {
       font-size: 4em;
+   }
+
+   .sub-heading {
+      font-size: 2.8em;
    }
    .container {
       width: 100%;
       height: 100%;
-      border-right: 10px solid transparent;
       border-left: 10px solid transparent;
    }
+
+   .content {
+      max-width: 100%;
+      left: 0;
+   }
+
    .contents {
       left: 0;
       border: 0;
    }
-   .politician {
-      max-width: 220px;
-      width: 30%;
+   #politicians_container {
+      .politician {
+         margin-bottom: 10px;
+         min-width: 230px;
+         max-width: 230px;
+         width: 230px;
+         height: auto;
+         img.politician_img {
+            height: 100px;
+            vertical-align: top;
+         }
+         .sm-links {
+            width: 60%;
+            i {
+               font-size: 1.1em;
+            }
+            a {
+               font-size: 0.9em;
+            }
+         }
+      }
    }
 }
 
@@ -606,14 +682,9 @@ form.selection-form {
       left: 120px;
    }
 
-
-
-
-
    .container {
       width: 100%;
       height: 100%;
-      border-right: 10px solid transparent;
       border-left: 10px solid transparent;
    }
 
@@ -626,13 +697,74 @@ form.selection-form {
       font-size: 3.5em;
    }
 
+   .sub-heading {
+      font-size: 2.5em;
+   }
+
+.box {
+   width: 60%;
+}
+
+#politicians_container {
    .politician {
-      max-width: 220px;
-      width: 30%;
+      margin-bottom: 10px;
+      min-width: 280px;
+      max-width: 280px;
+      width: 280px;
+      height: auto;
+      img.politician_img {
+         height: 100px;
+         vertical-align: top;
+      }
+      .sm-links {
+         width: 60%;
+         i {
+            font-size: 1.1em;
+         }
+         a {
+            font-size: 0.9em;
+         }
+      }
+   }
+}
+}
+
+
+@media all and (max-width: 570px) {
+   .box {
+      min-width: 399px;
+      max-width: 399px;
+      width: 70%;
+   }
+
+   #politicians_container {
+      .politician {
+         margin-bottom: 10px;
+         min-width: 70%;
+         max-width: 70%;
+         width: 70%;
+         height: auto;
+         img.politician_img {
+            height: 100px;
+            vertical-align: top;
+         }
+         .sm-links {
+            width: 60%;
+            i {
+               font-size: 1.1em;
+            }
+            a {
+               font-size: 1em;
+            }
+         }
+      }
    }
 }
 
+
+
 @media all and (max-width: 480px) {
+
    .page-body {
       overflow-x: hidden;
        position: relative;
@@ -649,7 +781,6 @@ form.selection-form {
    .container {
       width: 100%;
       height: 100%;
-      border-right: 10px solid transparent;
       border-left: 10px solid transparent;
    }
 
@@ -658,12 +789,147 @@ form.selection-form {
       border: 0;
    }
 
+   /* View a Politician */
+   .small {
+      display: block;
+      .links {
+         padding-left: 30px;
+         padding-top: 20px;
+         .s-l {
+            margin-bottom: 25px;
+
+            a {
+               font-size: 0.9em;
+            }
+            i {
+               font-size: 1em;
+            }
+         }
+      }
+   }
+   .padding {
+      padding: 0 8px;
+   }
+
+   .pol_info1 {
+      font-size: 1em;
+      height: auto;
+      padding: 3px;
+   }
+
+   .pol_info2 {
+      font-size: 0.8em;
+      font-weight: 100;
+      height: auto;
+      padding: 3px;
+   }
+
+   .pol_info3 {
+      font-size: 1em;
+      a[href^=tel]{
+         color: blue;
+      }
+   }
+   .medium {
+      display: none;
+   }
+   .large {
+      display: none;
+   }
+
+
    .heading {
       font-size: 3em;
    }
 
-   .politician {
+   .box {
       width: 80%;
-      max-width: 400px;
+      min-width: 384px;
+      max-width: 384px;
+      padding: 10px;
+   }
+
+   #politicians_container {
+      .politician {
+         margin-bottom: 10px;
+         min-width: 80%;
+         max-width: 80%;
+         width: 80%;
+         height: auto;
+         img.politician_img {
+            height: 100px;
+            vertical-align: top;
+         }
+         .sm-links {
+            width: 60%;
+            i {
+               font-size: 1.1em;
+            }
+            a {
+               font-size: 1em;
+            }
+         }
+      }
+   }
+}
+
+@media all and (max-width: 320px) {
+
+   .heading {
+      font-size: 2.05em;
+   }
+
+   .sub-heading {
+      font-size: 1.7em;
+   }
+
+   .content {
+      padding-top: 70px;
+   }
+
+   .sub-heading {
+      font-size: 2.4em;
+   }
+
+   .box {
+      width: 90%;
+      min-width: 288px;
+      max-width: 288px;
+      padding: 10px;
+   }
+
+   #politicians_container {
+      .politician {
+         margin-bottom: 10px;
+         min-width: 90%;
+         max-width: 90%;
+         width: 90%;
+         height: auto;
+         img.politician_img {
+            height: 100px;
+            vertical-align: top;
+         }
+         .sm-links {
+            width: 60%;
+            i {
+               font-size: 1.1em;
+            }
+            a {
+               font-size: 1em;
+            }
+         }
+      }
+      .house-results {
+         margin-bottom: 30px;
+         .house-sub-heading {
+            font-size: 1.3em;
+         }
+      }
+   }
+
+   /* View a Politician */
+
+   .pol_info1 {
+      font-size: 0.9em;
    }
 }
