--- a/public/scss/frontpage_styles.scss
+++ b/public/scss/frontpage_styles.scss
@@ -92,7 +92,7 @@ body {
         padding: 5px 0;
         display: inline-block;
       }
-      input[type=text] {
+      input[type=number] {
         font-family: FontAwesome;
         width: 90px;
         display: inline-block;
