--- a/public/scss/frontpage_styles.scss
+++ b/public/scss/frontpage_styles.scss
@@ -18,8 +18,9 @@ body {
   width: 100%;
 }
 
+/* Background image credit: JJ Harrison http://en.wikipedia.org/wiki/File:Parliament_House_Canberra_Dusk_Panorama.jpg */
 body {
-  background: url(/images/Parliament_House.jpg) no-repeat center center fixed;
+  background: url(/images/background.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
