--- a/public/css/frontpage_styles.css
+++ b/public/css/frontpage_styles.css
@@ -4569,8 +4569,9 @@ body {
   height: 100%;
   width: 100%; }
 
+/* Background image credit: JJ Harrison http://en.wikipedia.org/wiki/File:Parliament_House_Canberra_Dusk_Panorama.jpg */
 body {
-  background: url(/images/Parliament_House.jpg) no-repeat center center fixed;
+  background: url(/images/background.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
