--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5351,6 +5351,13 @@ form.selection-form {
   .search-box form.politician-selection-form {
     width: 95%;
     margin: 0 auto; }
+    .search-box form.politician-selection-form .title {
+      font-family: 'Helvetica Neue', sans-serif;
+      font-weight: 200;
+      font-size: 1.7em;
+      display: block;
+      text-align: center;
+      margin: 15px 0 50px 0; }
     .search-box form.politician-selection-form label {
       font-family: 'Helvetica Neue', sans-serif;
       font-weight: 200;
